--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 mango.h5
 
-input/MangoFruitDDS/SenMangoFruitDDS_bgremoved/
-input/MangoFruitDDS/SenMangoFruitDDS_original/
+#input/MangoFruitDDS/SenMangoFruitDDS_bgremoved/
+#input/MangoFruitDDS/SenMangoFruitDDS_original/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -157,3 +157,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+*.jpg
